tests/fixtures/parser/should_pass/03_hex_constant.pas
(* should_pass: integer_constant -> radix_integer (manual n#digits form).
   Replaces the former $FF case; $FF is rejected (see should_fail/15). *)
PROGRAM P;
CONST MASK = 16#FF;
BEGIN
END.
