tests/fixtures/parser/should_fail/13_bare_dollar.pas
(* should_fail: '$' with no hex digits. *)
PROGRAM P;
CONST C = $;
BEGIN
END.
